--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "glob": "^10.2.4",
-    "infinite-lang": "*",
+    "infinite-lang": "https://github.com/SieR-VR/infinite.git#master",
     "vscode-languageclient": "^8.1.0",
     "vscode-languageserver": "^8.1.0",
     "vscode-languageserver-textdocument": "^1.0.8",
